Update The Sparks Foundation Internship Task on Linear regression..ipynb

--- a/The Sparks Foundation Internship Task on Linear regression..ipynb
+++ b/The Sparks Foundation Internship Task on Linear regression..ipynb
@@ -21,7 +21,7 @@
    "id": "6d1ba6f7",
    "metadata": {},
    "source": [
-    "#### IN THIS TASK WE NEED TO PREDICT THE NUMBER SCORED BY STUDNET ON THE BASIS OF THE NUMBERS OF HOURS THYE HAVE STUDIED"
+    "#### IN THIS TASK WE NEED TO PREDICT THE NUMBER SCORED BY STUDNET ON THE BASIS OF THE NUMBERS OF HOURS THEY HAVE STUDIED"
    ]
   },
   {
